Fix podcast cover image center alignment issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1246,6 +1246,10 @@ body {
         max-width: 100%;
     }
 
+    #podcast-covers {
+        text-align: center;
+    }
+
     #podcast-covers img {
         padding: 0;
     }
